--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     name: test
     steps:
-      - uses: ./.github/workflows/actions
+      - uses: ./.github/workflows/action
       - uses: actions/upload-artifact@v3
         with:
           name: test-file
