--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,6 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     name: test
     steps:
+      - uses: actions/checkout@v3
       - uses: ./.github/workflows/action
       - uses: actions/upload-artifact@v3
         with:
