--- a/.github/workflows/action/action.yaml
+++ b/.github/workflows/action/action.yaml
@@ -3,4 +3,4 @@ runs:
   using: docker
   image: docker://alpine:latest
   args:
-    - "echo hello > /tmp/file"
+    - "sh -c 'echo hello > /tmp/file'"
