--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,4 +13,4 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: test-file
-          path: $GITHUB_WORKSPACE/testing
+          path: .
