--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: core.setFailed('fail')
+        continue-on-error: true
 
       - name: report failure
         uses: actions/github-script@v7
