--- a/.github/actions/pr-comment/action.yml
+++ b/.github/actions/pr-comment/action.yml
@@ -22,7 +22,7 @@ runs:
              issue_number: context.issue.number,
              owner: context.repo.owner,
              repo: context.repo.repo,
-             body: '⚠️ Terraform formatting issues were found. Please run `terraform fmt -recursive` locally and commit the changes.'
+             body: ${{ inputs.comment }}
           })
 
-          core.setFailed(inputs.error || inputs.comment)
+          core.setFailed(${{ inputs.error || inputs.comment }})
