--- a/.github/actions/pr-comment/action.yml
+++ b/.github/actions/pr-comment/action.yml
@@ -1,28 +1,31 @@
 name: PR Comment
 
-on:
-  workflow_call:
-    inputs:
-      comment:
-        type: string
-        required: true
+inputs:
+  comment:
+    type: string
+    required: true
 
-      error:
-        type: string
-        required: false
-        default: ''
+  error:
+    type: string
+    required: false
+    default: ''
 
 runs:
   using: composite
   steps:
     - uses: actions/github-script@v7
+      env:
+        COMMENT: ${{ inputs.comment }}
+        ERROR: ${{ inputs.error || inputs.comment }}
       with:
+        const comment = process.env.COMMENT
+        const error = process.env.ERROR
         script: |
           github.rest.issues.createComment({
              issue_number: context.issue.number,
              owner: context.repo.owner,
              repo: context.repo.repo,
-             body: ${{ inputs.comment }}
+             body: comment
           })
 
-          core.setFailed(${{ inputs.error || inputs.comment }})
+          core.setFailed(error)
