--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,10 +9,20 @@ permissions:
   contents: read
   pull-requests: write
 
+
+
 jobs:
   test:
-    name: create matrix
+    name: test
     runs-on: ubuntu-latest
+    steps:
+      - name: check
+        run: echo OK
+
+  deploy:
+    name: deploy
+    runs-on: ubuntu-latest
+    needs: [test]
     strategy:
       matrix:
         option:
